# Piper2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Design.md  README.md  Roadmap.md
Src/: CMakeLists.txt  Module.json  PiperAPI.hpp  PiperCLI.cpp  PiperContext.hpp  PiperCore.cpp  PiperCoreWin32.cpp  PiperRenderer.cpp
Src/BuiltinComponent/: CMakeLists.txt
Src/BuiltinComponent/Environment/: CMakeLists.txt
Src/BuiltinComponent/Environment/SampledEnvironment/: CMakeLists.txt  Kernel.cpp  SampledEnvironment.cpp  Shared.hpp
Src/BuiltinComponent/Geometry/: CMakeLists.txt
Src/BuiltinComponent/Geometry/BasicShapes/: BasicShapes.cpp  CMakeLists.txt  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Geometry/TriangleMesh/: CMakeLists.txt  TriangleMesh.cpp
Src/BuiltinComponent/Integrater/: CMakeLists.txt
Src/BuiltinComponent/Integrator/PathTracing/: CMakeLists.txt  Kernel.cpp  PathTracing.cpp  Shared.hpp
Src/BuiltinComponent/Light/: CMakeLists.txt
Src/BuiltinComponent/Light/AreaLight/: AreaLight.cpp  CMakeLists.txt  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Light/BasicLight/: BasicLight.cpp  CMakeLists.txt  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/RenderDriver/: CMakeLists.txt
Src/BuiltinComponent/RenderDriver/FixedSampler/: CMakeLists.txt  FixedSampler.cpp  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Sampler/: CMakeLists.txt
Src/BuiltinComponent/Sampler/ScrambledSobolSampler/: CMakeLists.txt  Kernel.cpp  ScrambledSobolSampler.cpp  Shared.hpp
Src/BuiltinComponent/Sensor/: CMakeLists.txt
Src/BuiltinComponent/Sensor/PerspectiveCamera/: CMakeLists.txt  Kernel.cpp  PerspectiveCamera.cpp  Shared.hpp
Src/BuiltinComponent/Surface/: CMakeLists.txt
Src/BuiltinComponent/Surface/Classic/: CMakeLists.txt  Classic.cpp  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Texture/: CMakeLists.txt
Src/BuiltinComponent/Texture/ConstantTexture/: CMakeLists.txt  ConstantTexture.cpp  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Texture/ProceduralTexture/: CMakeLists.txt  Kernel.cpp  ProceduralTexture.cpp  Shared.hpp
Src/BuiltinComponent/Texture/SampledTexture/: CMakeLists.txt  Kernel.cpp  SampledTexture.cpp  Shared.hpp
Src/BuiltinComponent/Tracer/: CMakeLists.txt
Src/BuiltinComponent/Tracer/Embree/: CMakeLists.txt  Embree.cpp  Kernel.cpp  Shared.hpp
Src/BuiltinComponent/Tracer/OptiX/: CMakeLists.txt  Kernel.cpp  OptiX.cpp  Shared.hpp
Src/Infrastructure/: CMakeLists.txt
Src/Infrastructure/Accelerator/: CMakeLists.txt
Src/Infrastructure/Accelerator/CUDA/: CMakeLists.txt  CUDA.cpp  Kernel.cpp  Shared.hpp
Src/Infrastructure/Accelerator/Parallel/: CMakeLists.txt  Kernel.cpp  Parallel.cpp  Shared.hpp
Src/Infrastructure/Allocator/: CMakeLists.txt
Src/Infrastructure/Allocator/JemallocAllocator/: CMakeLists.txt  JemallocAllocator.cpp
Src/Infrastructure/Concurrency/: CMakeLists.txt
Src/Infrastructure/Concurrency/Squirrel/: CMakeLists.txt  Squirrel.cpp
Src/Infrastructure/Concurrency/Taskflow/: CMakeLists.txt  Taskflow.cpp
Src/Infrastructure/Config/: CMakeLists.txt
Src/Infrastructure/Config/NlohmannJson/: CMakeLists.txt  NlohmannJson.cpp
Src/Infrastructure/FileSystem/: CMakeLists.txt
Src/Infrastructure/FileSystem/MemoryFS/: CMakeLists.txt  MemoryFS.cpp
Src/Infrastructure/FileSystem/MemoryFile/: CMakeLists.txt  MemoryFile.cpp
Src/Infrastructure/Logger/: CMakeLists.txt
Src/Infrastructure/Logger/Spdlog/: CMakeLists.txt  Spdlog.cpp
Src/Infrastructure/PerformancePrimitivesLibrary/: CMakeLists.txt
Src/Infrastructure/PerformancePrimitivesLibrary/Builtin/: Builtin.cpp  CMakeLists.txt  Kernel.cpp
Src/Infrastructure/Program/: CMakeLists.txt
Src/Infrastructure/Program/LLVMIR/: CMakeLists.txt  LLVMIR.cpp
Src/Interface/: ContextResource.hpp  Forward.hpp  Object.hpp
Src/Interface/BuiltinComponent/: Acceleration.hpp  Denoiser.hpp  Environment.hpp  Geometry.hpp  Image.hpp  ImageIO.hpp  Integrater.hpp  Integrator.hpp  Light.hpp  Material.hpp  Medium.hpp  RenderDriver.hpp  Sampler.hpp  Sensor.hpp  StructureParser.hpp  Surface.hpp  Texture.hpp  TextureSampler.hpp  Tracer.hpp
Src/Interface/Infrastructure/: Accelerator.hpp  Allocator.hpp  Concurrency.hpp  Config.hpp  Data.hpp  ErrorHandler.hpp  FileSystem.hpp  IO.hpp  JIT.hpp  Logger.hpp  Module.hpp  Network.hpp  Operator.hpp  PerformancePrimitivesLibrary.hpp  PhysicalQuantitySIDesc.hpp  Profiler.hpp  Program.hpp  ResourceUtil.hpp
Src/Kernel/: DeviceRuntime.hpp  FloatingPoint.hpp  PhysicalQuantitySI.hpp  Protocol.hpp  Sampling.hpp  Transform.hpp
Src/STL/: DynamicArray.hpp  Function.hpp  GSL.hpp  List.hpp  Map.hpp  Optional.hpp  Pair.hpp  STLAllocator.hpp  SharedPtr.hpp  Stack.hpp  String.hpp  StringView.hpp  UMap.hpp  USet.hpp  UniquePtr.hpp  Variant.hpp  Vector.hpp
Src/Test/: Accelerator-Test.cpp  Allocator-Test.cpp  CMakeLists.txt  Concurrency-Test.cpp  PiperCore-Test.cpp  Sampler-Test.cpp  TestEnvironment.hpp  conv.cpp  conv.hpp  saxpy.cpp
